[package]
name = "nom-span"
version = "0.1.1"
readme = "./README.md"
description = "Wrap your nom input into a span to get line, column and byte offset"
authors = ["Jules Guesnon <guesnonj@outlook.fr>"]
categories = ["encoding", "parser-implementations", "parsing"]
keywords = ["nom", "span", "line", "column", "parser"]
license = "MIT"
repository = "https://github.com/JulesGuesnon/nom-span"


[dependencies]
nom = "7"
memchr = "2.6.4"
bytecount = "0.6.7"
